--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,35 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-  <head>
-    <meta charset="utf-8">
-    <title>AirBnB Clone</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/2-common.css">
-    <link rel="stylesheet" href="styles/2-header.css">
-    <link rel="stylesheet" href="styles/2-footer.css">
-  </head>
+	<head>
+		<title>AirBnB clone</title>
 
-  <body>
-    <header></header>
-    <footer>
-      Holberton School
-    </footer>
-  </body>
-=======
-    <head>
-        <meta charset="utf-8">
-        <title>AirBnB clone</title>
-        <link rel="stylesheet" href="styles/2-common.css">
-        <link rel="stylesheet" href="styles/2-header.css">
-        <link rel="stylesheet" href="styles/2-footer.css">
-    </head>
+		<link rel="stylesheet" href="styles/2-common.css"/>
+		<link rel="stylesheet" href="styles/2-header.css"/>
+		<link rel="stylesheet" href="styles/2-footer.css"/>
+	</head>
     <body>
-        <header>
-        </header>
-        <footer>
-            <p>Best School</p>
-        </footer>
-    </body>
->>>>>>> b71f8e7893c229db43b4670abe1435b32de560c6
+		<header>
+		</header>
+
+		<footer>
+			<p>Holberton School</p>
+		</footer>
+	</body>
 </html>
