--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,34 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-  <meta charset="utf-8">
-  <title>AirBnB Clone</title>
+	<head>
+		<title>AirBnB clone</title>
+	</head>
+    <body style="margin:0px;padding:0px;">
+		<header style="background-color:#FF0000;height:70px;width:100%;">
+		</header>
 
-  <body style="margin: 0; padding: 0;">
-    <header style="background-color: #f00; height: 70px; width: 100%;">
-    </header>
-    <footer style="align-items: center;
-                   background-color: #0f0;
-                   bottom: 0;
-                   display: flex;
-                   height: 60px;
-                   justify-content: center;
-                   position: absolute;
-                   width: 100%;">
-      Holberton School
-    </footer>
-  </body>
-=======
-    <head>
-        <meta charset="utf-8">
-        <title>AirBnB clone</title>
-    </head>
-    <body style="margin: 0px; padding: 0px">
-        <header style="background-color: red; height: 70px; width: 100%;">
-        </header>
-        <footer style="background-color: #00FF00; height: 60px; width: 100%; bottom: 0; position: absolute">
-            <p style="text-align: center; margin: 20px">Best School</p>
-        </footer>
-    </body>
->>>>>>> b71f8e7893c229db43b4670abe1435b32de560c6
+		<footer style="position:fixed;bottom:0;background-color:#00FF00;height:60px;width:100%;text-align:center;line-height:30px;">
+			<p>Holberton School</p>
+		</footer>
+	</body>
 </html>
